--- a/TeaCoin/TeaCoin/Scenes/CoinListPage/CoinListCell.xib
+++ b/TeaCoin/TeaCoin/Scenes/CoinListPage/CoinListCell.xib
@@ -11,14 +11,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="Fof-eX-tRh">
+        <view contentMode="scaleToFill" id="Fof-eX-tRh" customClass="CoinListCell" customModule="TeaCoin" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="16c-e4-LCW">
                     <rect key="frame" x="10" y="40" width="210" height="60"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="A1y-v7-YRa">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="A1y-v7-YRa">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="fmH-Ao-M1y"/>
@@ -76,6 +76,13 @@
                 <constraint firstItem="hZX-6j-7nH" firstAttribute="bottom" secondItem="FpX-dE-9uz" secondAttribute="bottom" constant="40" id="fqh-Ra-2xq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="coinImage" destination="A1y-v7-YRa" id="c74-e8-TS3"/>
+                <outlet property="coinNameLabel" destination="fUw-d7-Wys" id="WxZ-UD-vqo"/>
+                <outlet property="priceChangeLabel" destination="gtW-f2-ZA2" id="nNh-uQ-yrr"/>
+                <outlet property="priceLabel" destination="Zd1-QQ-cNe" id="uVQ-HE-tPP"/>
+                <outlet property="shortCodeLabel" destination="8Dk-CQ-8Vr" id="bha-yl-uay"/>
+            </connections>
             <point key="canvasLocation" x="142.02898550724638" y="109.82142857142857"/>
         </view>
     </objects>
