--- a/TeaCoin/TeaCoin/Scenes/CoinListPage/CoinList.storyboard
+++ b/TeaCoin/TeaCoin/Scenes/CoinListPage/CoinList.storyboard
@@ -50,7 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-25" y="66"/>
+            <point key="canvasLocation" x="-26.086956521739133" y="65.625"/>
         </scene>
     </scenes>
     <resources>
